# chatapi

./: .gitignore  README.md  pyproject.toml
chatapi/: __main__.py  agent.py  agent_cli.py  agent_tui.py  anthropic_backend.py  auth.py  backend.py  chatfmt.py  client.py  multi_backend.py  protocol.py  server.py  session.py  wire.py
doc/: chatapi.md  chatfmt.md
examples/: simple_client.py
tests/: test_auth_and_multi.py  test_chatfmt.py  test_protocol.py  test_server_e2e.py  test_tools.py  test_wire.py
