[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatapi"
version = "0.0.1"
description = "Local agent server speaking the chatapi protocol"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89,<1",
]

[project.scripts]
chatapi-server = "chatapi.__main__:main"

[tool.setuptools.packages.find]
include = ["chatapi*"]
exclude = ["tests*", "examples*"]
