[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatapi"
version = "0.0.1"
description = "Local agent server speaking the chatapi protocol"
requires-python = ">=3.11"
dependencies = [
    "rich>=13,<15",
]

[project.optional-dependencies]
server = ["anthropic>=0.89,<1"]

[project.scripts]
chatapi-server = "chatapi.__main__:main"
chatapi-agent = "chatapi.agent_cli:main"

[tool.setuptools.packages.find]
include = ["chatapi*"]
exclude = ["tests*", "examples*"]
